[package]
name = "img-optim"
version = "1.0.1"
authors = ["Mickaël <mleduque@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.1.6", features = ["derive"]}
env_logger = "0.10.0"
globwalk = "0.8.1"
lazy_static = "1.4.0"
log = "0.4.17"
path-absolutize = "3.0.14"
tempfile = "3.2.0"
zip = "0.6.4"
