[package]
name = "img-optim"
version = "1.2.0"
authors = ["Mickaël <mleduque@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.30", features = ["derive"]}
dialoguer = "0.11.0"
env_logger = "0.11.6"
fs_extra = "1.3.0"
globwalk = "0.9.1"
lazy_static = "1.5.0"
log = "0.4.25"
path-absolutize = "3.1.1"
regex = "1.11.1"
tempfile = "3.17.1"
zip = "2.2.2"
